--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <!-- Testimonials Section -->
+    <!-- Testimonials Section 
     <div class="testimonials_section">
       <div class="container">
         <h1>Ce que disent nos étudiants</h1>
@@ -93,6 +93,7 @@
         </div>
       </div>
     </div>
+    -->
 
     <!-- FAQ Section -->
     <div class="faq_section">
